fix: sidebar item align

--- a/todo-react/src/index.scss
+++ b/todo-react/src/index.scss
@@ -556,6 +556,7 @@ th {
 .sidebar {
   &_item {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     border-radius: 8px;
     padding: 12px;
